added aspect ratio calculation

--- a/App.config
+++ b/App.config
@@ -13,6 +13,9 @@
             <setting name="runAtStartUp" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="saveDebugFrames" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
