--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="runAtStartUp" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="saveDebugFrames" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
