added settings to context menu

--- a/App.config
+++ b/App.config
@@ -16,6 +16,9 @@
             <setting name="saveDebugFrames" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autoAcceptMatch" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
