added auto reload and CSGO GSI Integration

--- a/App.config
+++ b/App.config
@@ -19,6 +19,9 @@
             <setting name="autoAcceptMatch" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="autoReload" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
