--- a/App.config
+++ b/App.config
@@ -22,6 +22,15 @@
             <setting name="autoReload" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="preferArmor" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="autoBuyDefuseKit" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="autoBuyArmor" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
