--- a/App.config
+++ b/App.config
@@ -31,6 +31,9 @@
             <setting name="autoBuyArmor" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="saveLogs" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
