moved all GSI releated stuff to a class named 'GameState.cs'

--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="GameState.cs" />
     <Compile Include="GSIDebugWindow.xaml.cs">
       <DependentUpon>GSIDebugWindow.xaml</DependentUpon>
     </Compile>
