Getting ready for release

--- a/App.config
+++ b/App.config
@@ -34,6 +34,9 @@
             <setting name="saveLogs" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ContinueSpraying" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
