--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="saveLogs" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ContinueSpraying" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
