--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -62,6 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\Spotify.cs" />
     <Page Include="GSIDebugWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -78,7 +79,7 @@
     <Compile Include="GSIDebugWindow.xaml.cs">
       <DependentUpon>GSIDebugWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Keyboard.cs" />
+    <Compile Include="Utils\Keyboard.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
