--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -62,7 +62,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Utils\Spotify.cs" />
+    <Compile Include="Exceptions\WriteException.cs" />
+    <Compile Include="Utils\Steam.cs" />
     <Page Include="GSIDebugWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -79,8 +80,8 @@
     <Compile Include="GSIDebugWindow.xaml.cs">
       <DependentUpon>GSIDebugWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Utils\Keyboard.cs" />
-    <Compile Include="Log.cs" />
+    <Compile Include="Keyboard.cs" />
+    <Compile Include="Utils\Log.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
