--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Exceptions\WriteException.cs" />
+    <Compile Include="Utils\Spotify.cs" />
     <Compile Include="Utils\Steam.cs" />
     <Page Include="GSIDebugWindow.xaml">
       <SubType>Designer</SubType>
@@ -80,7 +81,7 @@
     <Compile Include="GSIDebugWindow.xaml.cs">
       <DependentUpon>GSIDebugWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Keyboard.cs" />
+    <Compile Include="Utils\Keyboard.cs" />
     <Compile Include="Utils\Log.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
