added auto play/resume spotify

--- a/App.config
+++ b/App.config
@@ -37,6 +37,9 @@
             <setting name="ContinueSpraying" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autoPausePlaySpotify" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
