--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="ContinueSpraying" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="autoPausePlaySpotify" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
