Added checking for updates on startup moved every automation stuff to its own menu item category moved every setting to its own menu item category

--- a/App.config
+++ b/App.config
@@ -40,6 +40,9 @@
             <setting name="autoPausePlaySpotify" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="autoCheckForUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
