--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="autoPausePlaySpotify" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="autoCheckForUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
