added parse gamestate from a file

--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -78,6 +78,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Utils\Spotify.cs" />
+    <Compile Include="Utils\TypeConvertor.cs" />
     <Page Include="GSIDebugWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
