--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -77,6 +77,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\DiscordRpc.cs" />
     <Compile Include="Utils\Spotify.cs" />
     <Compile Include="Utils\TypeConvertor.cs" />
     <Page Include="GSIDebugWindow.xaml">
@@ -151,6 +152,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="discord-rpc-w32.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
