added menu item options for discord

--- a/App.config
+++ b/App.config
@@ -43,6 +43,9 @@
             <setting name="autoCheckForUpdates" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="enableDiscordRPC" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
