--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="autoCheckForUpdates" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="enableDiscordRPC" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
