--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -170,7 +170,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="discord-rpc-w32.dll">
+    <None Include="DLLS\discord-rpc-w32.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
