--- a/CSAuto.csproj
+++ b/CSAuto.csproj
@@ -90,7 +90,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Utils\CSGOFriendCode.cs" />
+    <Compile Include="Utils\CSGO\CSGOFriendCode.cs" />
+    <Compile Include="Utils\CSGO\CSGOMap.cs" />
     <Compile Include="Utils\DiscordRpc.cs" />
     <Compile Include="Utils\Github.cs" />
     <Compile Include="Utils\Spotify.cs" />
