--- a/CSAuto_Mobile/Properties/AndroidManifest.xml
+++ b/CSAuto_Mobile/Properties/AndroidManifest.xml
@@ -4,4 +4,5 @@
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
