added asking for battery optimization disabling in mobile app added mobile app menu in desktop app which you can enable/disable the mobile app and enter the ip address

--- a/App.config
+++ b/App.config
@@ -46,6 +46,12 @@
             <setting name="enableDiscordRPC" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="phoneIpAddress" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="mobileAppEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
 </configuration>
