added languages to desktop app

--- a/App.config
+++ b/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="CSAuto.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CSAuto.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -52,6 +55,21 @@
             <setting name="mobileAppEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="currentLanguage" serializeAs="String">
+                <value>language_english</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <CSAuto.Properties.Settings>
+            <setting name="languages" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>language_english</string>
+                        <string>language_russian</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+        </CSAuto.Properties.Settings>
+    </applicationSettings>
 </configuration>
