added notifications menu added notifications translation changed from checking procces every time to just once till i find it

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -58,6 +58,21 @@
             <setting name="currentLanguage" serializeAs="String">
                 <value>language_english</value>
             </setting>
+            <setting name="acceptedNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="mapNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="lobbyNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="connectedNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="crashedNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
