--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -54,5 +54,20 @@
     <Setting Name="currentLanguage" Type="System.String" Scope="User">
       <Value Profile="(Default)">language_english</Value>
     </Setting>
+    <Setting Name="acceptedNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="mapNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="lobbyNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="connectedNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="crashedNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
