added bomb information to mobile

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -73,6 +73,9 @@
             <setting name="crashedNotification" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="bombNotification" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
