--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -69,5 +69,8 @@
     <Setting Name="crashedNotification" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="bombNotification" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
