added steamworks api exe which can send information so that it wont show that you are in game when not added lobby members info

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -76,6 +76,9 @@
             <setting name="bombNotification" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="steamAPIkey" serializeAs="String">
+                <value />
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
