--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -72,5 +72,8 @@
     <Setting Name="bombNotification" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="steamAPIkey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
