chaged steamapiserver exe name to steamapi.exe added option to disable lobby count in discord rpc for safety reason as i still dont know if its bannable

--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -75,5 +75,8 @@
     <Setting Name="steamAPIkey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="enableLobbyCount" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
