--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -79,6 +79,9 @@
             <setting name="steamAPIkey" serializeAs="String">
                 <value />
             </setting>
+            <setting name="enableLobbyCount" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
