--- a/CSAuto/CSAuto.csproj
+++ b/CSAuto/CSAuto.csproj
@@ -94,7 +94,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AppLanguage.cs" />
+    <Compile Include="Languages\AppLanguage.cs" />
+    <Compile Include="Languages\English.cs" />
+    <Compile Include="Languages\Russian.cs" />
+    <Compile Include="Languages\Template.cs" />
     <Compile Include="Utils\CSGO\CSGOFriendCode.cs" />
     <Compile Include="Utils\CSGO\CSGOMap.cs" />
     <Compile Include="Utils\DiscordRpc.cs" />
