telegram notifications added

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -82,6 +82,9 @@
             <setting name="enableLobbyCount" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="telegramChatId" serializeAs="String">
+                <value />
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
