--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -78,5 +78,8 @@
     <Setting Name="enableLobbyCount" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="telegramChatId" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
