added prebuild command to create apikeyslocal if dont exist

--- a/CSAuto/CSAuto.csproj
+++ b/CSAuto/CSAuto.csproj
@@ -198,4 +198,11 @@
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>cd $(ProjectDir)
+
+if not exist APIKeysLocal.cs (
+    type nul &gt; APIKeysLocal.cs
+)</PreBuildEvent>
+  </PropertyGroup>
 </Project>
