fixed apikeyslocal generation

--- a/APIKeys/APIKeys.csproj
+++ b/APIKeys/APIKeys.csproj
@@ -46,4 +46,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>cd $(ProjectDir)
+
+if not exist APIKeysLocal.cs (
+    type nul &gt; APIKeysLocal.cs
+)</PreBuildEvent>
+  </PropertyGroup>
 </Project>
