added dark theme

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -85,6 +85,9 @@
             <setting name="telegramChatId" serializeAs="String">
                 <value />
             </setting>
+            <setting name="darkTheme" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
