added bot link button to telegram chat id, added color selection

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -88,6 +88,9 @@
             <setting name="darkTheme" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="currentColor" serializeAs="String">
+                <value>Green</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
