UI Improvments, chnaged messagebox to metromessagebox, removed colors combobox

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -103,6 +103,35 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="availableColors" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>Red</string>
+                        <string>Green</string>
+                        <string>Blue</string>
+                        <string>Purple</string>
+                        <string>Orange</string>
+                        <string>Lime</string>
+                        <string>Emerald</string>
+                        <string>Teal</string>
+                        <string>Cyan</string>
+                        <string>Cobalt</string>
+                        <string>Indigo</string>
+                        <string>Violet</string>
+                        <string>Pink</string>
+                        <string>Magenta</string>
+                        <string>Crimson</string>
+                        <string>Amber</string>
+                        <string>Yellow</string>
+                        <string>Brown</string>
+                        <string>Olive</string>
+                        <string>Steel</string>
+                        <string>Mauve</string>
+                        <string>Taupe</string>
+                        <string>Sienna</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
         </CSAuto.Properties.Settings>
     </applicationSettings>
 </configuration>
