added customizing discord rpc

--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -91,6 +91,18 @@
             <setting name="currentColor" serializeAs="String">
                 <value>Green</value>
             </setting>
+            <setting name="lobbyDetails" serializeAs="String">
+                <value>FriendCode: {FriendCode}</value>
+            </setting>
+            <setting name="lobbyState" serializeAs="String">
+                <value>Chilling in lobby</value>
+            </setting>
+            <setting name="inGameDetails" serializeAs="String">
+                <value>{Gamemode} - {Map}</value>
+            </setting>
+            <setting name="inGameState" serializeAs="String">
+                <value>{TeamScore} [{MyTeam}] ({RoundState}) {EnemyScore} [{EnemyTeam}]</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
