--- a/CSAuto/App.config
+++ b/CSAuto/App.config
@@ -103,6 +103,9 @@
             <setting name="inGameState" serializeAs="String">
                 <value>{TeamScore} [{MyTeam}] ({RoundState}) {EnemyScore} [{EnemyTeam}]</value>
             </setting>
+            <setting name="oldAutoBuy" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CSAuto.Properties.Settings>
     </userSettings>
     <applicationSettings>
