--- a/CSAuto/Properties/Settings.settings
+++ b/CSAuto/Properties/Settings.settings
@@ -127,5 +127,8 @@
     <Setting Name="inGameState" Type="System.String" Scope="User">
       <Value Profile="(Default)">{TeamScore} [{MyTeam}] ({RoundState}) {EnemyScore} [{EnemyTeam}]</Value>
     </Setting>
+    <Setting Name="oldAutoBuy" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
