--- a/src/CSAuto/CSAuto.csproj
+++ b/src/CSAuto/CSAuto.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Native\RECT.cs" />
     <Compile Include="Utils\CSGO\CSGOFriendCode.cs" />
     <Compile Include="Utils\CSGO\CSGOMap.cs" />
+    <Compile Include="Utils\CSGO\GameStateListener.cs" />
     <Compile Include="Utils\DiscordRpc.cs" />
     <Compile Include="Utils\Github.cs" />
     <Compile Include="Utils\InputBox.cs" />
@@ -139,7 +140,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameState.cs" />
+    <Compile Include="Utils\CSGO\GameState.cs" />
     <Compile Include="GUIWindow.xaml.cs">
       <DependentUpon>GUIWindow.xaml</DependentUpon>
     </Compile>
